--- a/css/zrqStyle.css
+++ b/css/zrqStyle.css
@@ -19,6 +19,10 @@ img:hover {
     animation-iteration-count: infinite;
 }
 
+.zrq-margin-left {
+    margin-left: 1rem;
+}
+
 @keyframes shake {
     0% {
         transform: translate(1px, 1px) rotate(0deg);
