--- a/css/zrqStyle.css
+++ b/css/zrqStyle.css
@@ -2,11 +2,6 @@ body {
     background-color: transparent;
 }
 
-html {
-    padding: 5rem;
-
-}
-
 .bagel-img {
     width: 20%;
 }
@@ -82,4 +77,16 @@ img:hover {
     100% {
         transform: translate(1px, -2px) rotate(-1deg);
     }
+}
+
+
+.zrq-footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    /* Set the fixed height of the footer here */
+    line-height: 60px;
+    /* Vertically center the text there */
+    background-color: #f5f5f5;
 }
